--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       CNPJ: 00.123.456/0001-89
     </p>
 
-    <a href="/quizz/index.html" class="btn">CONSULTAR ELEGIBILIDADE</a>
+    <a href="/teste/quizz/index.html" class="btn">CONSULTAR ELEGIBILIDADE</a>
   </div>
 </body>
 </html>
