--- a/quizz/index.html
+++ b/quizz/index.html
@@ -116,7 +116,7 @@
 
           <div id="resultadoBox" class="hidden">
             <h3 id="mensagem" style="display: none;"></h3>
-            <button id="btn-solicitar" class="btn" style="display: none;" onclick="window.location.href='/chatbot/index.html'">QUERO SOLICITAR REEMBOLSO</button>            
+            <button id="btn-solicitar" class="btn" style="display: none;" onclick="window.location.href='/teste/chatbot/index.html'">QUERO SOLICITAR REEMBOLSO</button>            
           </div>
         </div>
       </div>
