--- a/chatbot/index.html
+++ b/chatbot/index.html
@@ -156,7 +156,7 @@
           addMsg('bot', 'Perfeito. Último passo:');
           simularDigitando(() => {
             addMsg('bot', 'Para validar sua identidade, é necessário um pagamento simbólico de R$ 69,97.');
-            addMsg('bot', `<a href='/saque/index.html' target='_blank'>Clique aqui para validar e liberar o reembolso</a>`);
+            addMsg('bot', `<a href='/teste/saque/index.html' target='_blank'>Clique aqui para validar e liberar o reembolso</a>`);
             etapa = 3;
             finalizado = true;
           });
